# PlusIrbis

./: .clang-format  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  IrbisDroid.sln  PlusIrbis.2015.sln  PlusIrbis.2017.sln  PlusIrbis.2019.sln  README.md  appveyor.yml  build.cmd  build.sh  build_2015.cmd  build_2017.cmd  build_2019.cmd  build_clang.cmd  build_intel.cmd  build_mingw.cmd  compile.bat  covscan.cmd  meson.build  run_tests.cmd  trans.cmd
.github/workflows/: cmake.yml
Docs/: chapter1.md  chapter2.md  chapter3.md  chapter6.md  index.md
Source/: PlusIrbis.2015.sln  PlusIrbis.2017.sln  PlusIrbis.2019.sln  PlusIrbis.sln
Source/OfflineGTests/: OfflineGTests.2019.vcxproj  SpanTest.cpp  pch.h
Source/OfflineTests/: DateTest.cpp  EncodingTest.cpp  FormatTest.cpp  IrbisTest.cpp  MarcRecordTest.cpp  OfflineTests.2017.vcxproj  OfflineTests.vcxproj  PlusIrbisTest.cpp  RecordFieldTest.cpp  ResultTest.cpp  SpanTest.cpp  SubFieldListTest.cpp  SubFieldTest.cpp  TextNavigatorTest.cpp  UtilsTest.cpp  _template.cpp  stdafx.cpp  stdafx.h  tests.h
Source/OnlineTests/: CMakeLists.txt  OnlineTests.2015.vcxproj  OnlineTests.2017.vcxproj  OnlineTests.2019.vcxproj  OnlineTests.cpp  OnlineTests.vcxproj  compile_for_osx.sh  stdafx.h
Source/PlusIrbis/: AlphabetTable.cpp  CMakeLists.txt  ChunkedBuffer.cpp  ClientInfo.cpp  ClientQuery.cpp  ClientSocket.cpp  CommandCode.cpp  Connection.cpp  ConnectionFactory.cpp  DatabaseInfo.cpp  Encoding.cpp  FileSpecification.cpp  Format.cpp  IrbisDate.cpp  IrbisText.cpp  MarcRecord.cpp  MemoryChunk.cpp  MenuEntry.cpp  MenuFile.cpp  NotImplementedException.cpp  NumberChunk.cpp  PlusIrbis.cpp  PlusIrbis.h  PlusIrbis.vcxproj  PlusIrbisPrivate.h  RawRecord.cpp  RecordField.cpp  RecordFieldList.cpp  RecordSerializer.cpp  ServerResponse.cpp  SubField.cpp  SubFieldList.cpp  Tcp4Socket.cpp  TextNavigator.cpp  Version.cpp  dllmain.cpp  stdafx.cpp  stdafx.h
Source/irbis/: AlphabetTable.cpp  CMakeLists.txt  ChunkedBuffer.cpp  ClientQuery.cpp  ClientSocket.cpp  Connection.cpp  ConnectionFactory.cpp  DatabaseInfo.cpp  Date.cpp  DirectAccess.cpp  EmbeddedField.cpp  Encoding.cpp  FileSpecification.cpp  FoundLine.cpp  GblResult.cpp  GblStatement.cpp  IO.cpp  IlfFile.cpp  IniFile.cpp  IrbisDate.cpp  IrbisText.cpp  Iso2709.cpp  MarcRecord.cpp  MemoryChunk.cpp  MenuEntry.cpp  MenuFile.cpp  MstControlRecord64.cpp  MstFile64.cpp  MstRecord64.cpp  MstRecordLeader64.cpp  NewEncoding.cpp  ParFile.cpp  RawRecord.cpp  RecordField.cpp  Search.cpp  ServerResponse.cpp  ServerStat.cpp  Span.cpp  SubField.cpp  Tcp4Socket.cpp  (+14 more)
apps/: CMakeLists.txt  meson.build
apps/headersOnly/: CMakeLists.txt  headersOnly.vcxproj
apps/headersOnly/src/: BusyState.cpp  ByteRange.cpp  Network.cpp  SecretString.cpp  System.cpp  TextRange.cpp  main.cpp  mmap.cpp
apps/hello/: CMakeLists.txt  hello.2017.vcxproj  meson.build
apps/hello/src/: hello.cpp  main.cpp
apps/irbisProxy/: CMakeLists.txt
apps/irbisProxy/src/: main.cpp
apps/readCard/: CMakeLists.txt
apps/readCard/src/: main.cpp
apps/rqstShrink/: CMakeLists.txt  meson.build  rqstShrink.2017.vcxproj
apps/rqstShrink/src/: main.cpp
apps/sendChar/: CMakeLists.txt  sendChar.2017.vcxproj
apps/sendChar/res/: resources.rc
apps/sendChar/src/: main.cpp
apps/sigler/: CMakeLists.txt  meson.build
apps/sigler/src/: main.cpp
assets/: ilf.bt
docs/: chapter1.md  chapter2.md  chapter3.md  chapter4.md  chapter5.md  chapter7.md  index.md
include/: irbis.h  irbis_direct.h  irbis_pft.h  rfid.h
libs/: CMakeLists.txt  meson.build
libs/IrbisDroid/: IrbisDroid.vcxproj
libs/common/: irbis.cmake  (+1 more)
libs/irbis/: CMakeLists.txt  Makefile  irbis.2015.vcxproj  irbis.2017.vcxproj  irbis.2019.vcxproj  meson.build
libs/irbis/include/: irbis.h  irbis_internal.h  irbis_private.h  irbis_version.h
libs/irbis/src/: Address.cpp  AlphabetTable.cpp  Author.cpp  BookInfo.cpp  ByteNavigator.cpp  ChunkedBuffer.cpp  ClientQuery.cpp  ClientSocket.cpp  Codes.cpp  Connection.cpp  ConnectionAdmin.cpp  ConnectionBase.cpp  ConnectionContext.cpp  ConnectionFactory.cpp  ConnectionFull.cpp  ConnectionLite.cpp  ConnectionPhantom.cpp  ConnectionSearch.cpp  DatabaseInfo.cpp  Date.cpp  DirectAccess.cpp  Directory.cpp  Ean.cpp  EmbeddedField.cpp  Encoding.cp1251.cpp  Encoding.cp866.cpp  Encoding.cpp  Encoding.koi8r.cpp  Encoding.utf8.cpp  Exemplar.cpp  File.cpp  FileSpecification.cpp  FoundLine.cpp  Gbl.cpp  GblParameter.cpp  GblResult.cpp  IO.cpp  IlfFile.cpp  IniFile.cpp  IrbisText.cpp  (+49 more)
libs/irbis_shared/: CMakeLists.txt
libs/rfid/: CMakeLists.txt  rfid.2017.vcxproj
libs/rfid/include/: rfid.h
libs/rfid/src/: WinSmartCards.cpp  rfid.cpp
libs/rfid_shared/: CMakeLists.txt
libs/rfid_shared/src/: main.cpp
micro/: .gitignore  CMakeLists.txt  MicroApplication.sln  MicroApplication.vcxproj  README.md  connect.cpp  field.cpp  internal.h  main.cpp  micro.cpp  micro.h  query.cpp  record.cpp  response.cpp  socket.cpp  status.cpp  sub.cpp  utils.cpp  version.cpp
testData/: utf8.txt  ws32.opt
tests/: CMakeLists.txt  meson.build
tests/onlineTests/: CMakeLists.txt  meson.build
tests/onlineTests/src/: main.cpp
tests/safeTests/: CMakeLists.txt  meson.build  safeTests.2015.vcxproj  safeTests.2017.vcxproj  safeTests.2019.vcxproj
tests/safeTests/include/: safeTests.h
tests/safeTests/src/: AlphabetTableTest.cpp  AuthorTest.cpp  BookInfoTest.cpp  ByteNavigatorTest.cpp  ChunkedBufferTest.cpp  ChunkedDataTest.cpp  CodesTest.cpp  ConnectionTest.cpp  DateTest.cpp  DirectAccessTest.cpp  DirectoryTest.cpp  EanTest.cpp  EmbeddedFieldTest.cpp  EncodingTest.cpp  ExemplarTest.cpp  FastBufferTest.cpp  FastPImplTest.cpp  FileSpecificationTest.cpp  FileTest.cpp  FormatTest.cpp  FoundLineTest.cpp  FrugalTest.cpp  GblTest.cpp  IOTest.cpp  IlfTest.cpp  IniTest.cpp  IsbnTest.cpp  Iso2709Test.cpp  JoinedDataTest.cpp  MarcRecordTest.cpp  MaybeTest.cpp  MemoryPoolTest.cpp  MenuTest.cpp  NotNullTest.cpp  NumberTextTest.cpp  OptFileTest.cpp  OptionalTest.cpp  ParFileTest.cpp  PointerGuardTest.cpp  PostingTest.cpp  (+23 more)
utils/: TransProject.cs  Unicoder.cs  countlines
